manifests/retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - retries:
        attempts: 3
        perTryTimeout: 2s
      route:
        - destination:
            host: reviews
            subset: v1
